2007-03-28  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Disable References combos etc for
	non-dotnet projects.

2007-03-28  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs (FillCombos): Sort list of variables.

2007-03-28  Ankit Jain  <jankit@novell.com>

	* CustomMakefile.cs (InitVarToValuesDict): Skip blank entries.
	* MakefileData.cs: Replace StartsWith with direct comparisons for small
	strings. For references, ignore empty entries.
	(ParseReference):
	(GacRefToString): Catch specific exceptions for AssemblyName.GetAssemblyName

2007-03-21  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (PkgCheckModulesRegex): Fix regex to correctly handle
	strings like 'PKG_CHECK_MODULES(FOO,foo0 >= 2.4 foo1 foo2)', this should
	give 3 packages : foo0, foo1 and foo2.

2007-03-04  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.Autotools/Handler.cs: make strings translatable.

2007-03-04  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs,
	* gtk-gui/gui.stetic: make all strings in option panel translatable.

2007-02-28  Ankit Jain <jankit@novell.com> 

	* MakefileData.cs (WriteFiles): Ignore directory entries.

2007-02-22  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Disable the AssemblyName and OutputDir
	combos, as they are not being used right now.
	* gtk-gui/*: Update.

2007-02-21  Ankit Jain  <jankit@novell.com>

	* CustomMakefile.cs: Avoid adding extra spaces for empty variables.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs: Support escaping filenames. Escaping only '\' and '#'
	currently.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Ensure that entry boxes for make targets
	are activated only if required when loading the gui. These should be
	activated only if a valid makefile is specified.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 
