@@ -23,7 +23,12 @@ namespace MonoDevelop.Autotools
 		{
 			this.data = tmpData;
 			isDotNetProject = (project is DotNetProject);
-			
+			if (!isDotNetProject) {
+				// Disable all References combos etc for non-dotnet projects
+				cbKeepRefSync.Sensitive = false;
+				HandleKeepRefSyncClicked (cbKeepRefSync);
+			}
+
 			if (data == null) {
 				//Use defaults
 				data = new MakefileData ();
@@ -46,12 +51,6 @@ namespace MonoDevelop.Autotools
 				this.fileEntryMakefilePath.Path = data.AbsoluteMakefileName;
 				this.fileEntryMakefilePath.DefaultPath = data.AbsoluteMakefileName;
 				this.cbEnableMakefileIntegration.Active = data.IntegrationEnabled;
-				
-				if (!isDotNetProject) {
-					// Disable all References combos etc for non-dotnet projects
-					cbKeepRefSync.Sensitive = false;
-					HandleKeepRefSyncClicked (cbKeepRefSync);
-				}
 
 				FillCompilerMessageCombo ();
 				SetActiveVar (comboMessageType, data.MessageRegexName);
